[tool.poetry]
name = "44-skybank"
version = "0.1.0"
description = ""
authors = ["Andrey Cheltyomov <master.haunt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
alpha-vantage = "^3.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.1"
black = "^24.4.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.black]
# Максимальная длина строки
line-length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
